--- a/3LTB/3LTB/Areas/Identity/Pages/Account/Register.cshtml
+++ b/3LTB/3LTB/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,12 +6,18 @@
 
 <h1>@ViewData["Title"]</h1>
 
-<div class="row">
-    <div class="col-md-4">
-        <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+<form asp-route-returnUrl="@Model.ReturnUrl" method="post">
+    <div class="row">
+        <div class="col-md-4">
+            @*<form asp-route-returnUrl="@Model.ReturnUrl" method="post">*@
             <h4>Create a new account.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Input.EmployeeID"></label>
+                <input asp-for="Input.EmployeeID" class="form-control" />
+                <span asp-validation-for="Input.EmployeeID" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
@@ -28,10 +34,32 @@
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
-        </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
+
+        </div>
+        <div class="col-md-6 col-md-offset-2">
+            <h4>Please enter additional required information.</h4>
+            <hr />
+            <div class="form-group">
+                <label asp-for="Input.FirstName"></label>
+                <input asp-for="Input.FirstName" class="form-control" />
+                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.LastName"></label>
+                <input asp-for="Input.LastName" class="form-control" />
+                <span asp-validation-for="Input.LastName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.SeniorityNumber"></label>
+                <input asp-for="Input.SeniorityNumber" class="form-control" />
+                <span asp-validation-for="Input.SeniorityNumber" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Base"></label>
+                <input asp-for="Input.Base" class="form-control" />
+                <span asp-validation-for="Input.Base" class="text-danger"></span>
+            </div>
+            @*<section>
             <h4>Use another service to register.</h4>
             <hr />
             @{
@@ -58,9 +86,10 @@
                     </form>
                 }
             }
-        </section>
+        </section>*@
+        </div>
     </div>
-</div>
+</form>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
