--- a/3LTB/3LTB/Areas/Identity/Pages/Account/Register.cshtml
+++ b/3LTB/3LTB/Areas/Identity/Pages/Account/Register.cshtml
@@ -59,6 +59,11 @@
                 <input asp-for="Input.Base" class="form-control" />
                 <span asp-validation-for="Input.Base" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Input.PhoneNumber"></label>
+                <input asp-for="Input.PhoneNumber" class="form-control" />
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+            </div>
             @*<section>
             <h4>Use another service to register.</h4>
             <hr />
