--- a/3LTB/3LTB/Areas/Identity/Pages/Account/Register.cshtml
+++ b/3LTB/3LTB/Areas/Identity/Pages/Account/Register.cshtml
@@ -50,19 +50,19 @@
                 <span asp-validation-for="Input.LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Input.PhoneNumber"></label>
+                <input asp-for="Input.PhoneNumber" class="form-control" />
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Input.SeniorityNumber"></label>
                 <input asp-for="Input.SeniorityNumber" class="form-control" />
                 <span asp-validation-for="Input.SeniorityNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Input.Base"></label>
-                <input asp-for="Input.Base" class="form-control" />
+                <select asp-for="Input.Base" class="form-control" asp-items="Model.Options"></select>
                 <span asp-validation-for="Input.Base" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Input.PhoneNumber"></label>
-                <input asp-for="Input.PhoneNumber" class="form-control" />
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
             @*<section>
             <h4>Use another service to register.</h4>
