--- a/3LTB/3LTB/Views/TradeBoard/CreatePost.cshtml
+++ b/3LTB/3LTB/Views/TradeBoard/CreatePost.cshtml
@@ -13,9 +13,9 @@
             <div asp-validation-summary="All" class="text-danger">
             </div>
                 <div class="form-group">
-                    <label asp-for="Title"></label>
-                    <input asp-for="Title" class="form-control" />
-                    <span asp-validation-for="Title" class="text-danger"></span>
+                    <label asp-for="Trade"></label>
+                    <input asp-for="Trade" class="form-control" />
+                    <span asp-validation-for="Trade" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="DepartureCity"></label>
@@ -32,20 +32,20 @@
                     <input asp-for="Position" class="form-control" />
                     <span asp-validation-for="Position" class="text-danger"></span>
                 </div>
-                <div class="form-group">
+                @*<div class="form-group">
                     <label asp-for="Report"></label>
                     <input asp-for="Report" class="form-control" />
                     <span asp-validation-for="Report" class="text-danger"></span>
-                </div>
+                </div>*@
                 <button type="submit" class="btn btn-primary">Create</button>
         </div>
 
         <div class="col-md-5 col-md-offset-2">
             <hr />
             <div class="form-group">
-                <label asp-for="Trade"></label>
-                <input asp-for="Trade" class="form-control" />
-                <span asp-validation-for="Trade" class="text-danger"></span>
+                <label asp-for="Title"></label>
+                <input asp-for="Title" class="form-control" />
+                <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ArrivalCity"></label>
