--- a/3LTB/3LTB/Views/TradeBoard/Index.cshtml
+++ b/3LTB/3LTB/Views/TradeBoard/Index.cshtml
@@ -66,48 +66,78 @@
         </form>
 
         <div class="row">
-            <div class="col-sm-2">
+            <div class="col-sm-1">
                 <p><a href="#" class="btn" role="button">Trade</a></p>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-2">
                 <p><a href="#" class="btn" role="button">Title</a></p>
             </div>
-            <div class="col-sm-2">
+            <div class="col-sm-1">
                 <p><a href="#" class="btn" role="button">Seq/Orig Dt</a></p>
+            </div>
+            <div class="col-sm-1">
+                <p><a href="#" class="btn" role="button">Flight</a></p>
             </div>
             <div class="col-sm-1">
                 <p><a href="#" class="btn" role="button">Pos</a></p>
             </div>
-            <div class="col-sm-2">
+            <div class="col-sm-1">
                 <p><a href="#" class="btn" role="button">Report</a></p>
             </div>
             <div class="col-sm-1">
+                <p><a href="#" class="btn" role="button">Credit</a></p>
+            </div>
+            <div class="col-sm-1">
                 <p><a href="#" class="btn" role="button">Lang</a></p>
+            </div>
+            <div class="col-sm-1">
+                <p><a href="#" class="btn" role="button">Depart City</a></p>
+            </div>
+            <div class="col-sm-1">
+                <p><a href="#" class="btn" role="button">Arrival City</a></p>
+            </div>
+            <div class="col-sm-1">
+                <p><a href="#" class="btn" role="button">Flag</a></p>
             </div>
         </div>
 
         @foreach (var post in Model)
         {
             <div class="row">
-                <div class="col-sm-2">
+                <div class="col-sm-1">
                     <p>@post.Trade</p>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-2">
                     <p>@post.Title</p>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-1">
                     @*<p>@post.FlightDate</p>*@
                     @*Had to use Html helper so that FlightDate displays according to format in Post.cs*@
-                    @Html.DisplayFor(modelPost => post.FlightDate)
+                    <p>@Html.DisplayFor(modelPost => post.FlightDate)</p>
+                </div>
+                <div class="col-sm-1">
+                    <p>@post.Flight</p>
                 </div>
                 <div class="col-sm-1">
                     <p>@post.Position</p>
                 </div>
-                <div class="col-sm-2">
-                    <p>@post.Report</p>
+                <div class="col-sm-1">
+                    <p>@Html.DisplayFor(modelPost => post.Report)</p>
+                </div>
+                <div class="col-sm-1">
+                    <p>credit</p>
                 </div>
                 <div class="col-sm-1">
                     <p>@post.Lang</p>
+                </div>
+                <div class="col-sm-1">
+                    <p>@post.DepartureCity</p>
+                </div>
+                <div class="col-sm-1">
+                    <p>@post.ArrivalCity</p>
+                </div>
+                <div class="col-sm-1">
+                    <p>@post.RedFlag</p>
                 </div>
             </div>
         }
